--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,27 +1,48 @@
----
+version: "2"
 linters:
-  enable-all: true
+  default: all
   disable:
-    - exportloopref # WARN The linter 'exportloopref' is deprecated (since v1.60.2) due to: Since Go1.22 (loopvar) this linter is no longer relevant. Replaced by copyloopvar.
-    - err113 # WARN [lintersdb] The name "goerr113" is deprecated. The linter has been renamed to: err113
-    - tagliatelle
-    - wsl
-    - nlreturn
-    - lll
-    - godot
-    - varnamelen
-    - ireturn
     - depguard
-    - tagalign
-    # TODO
     - dupl
-    - wrapcheck
-    - testpackage
-    - godox
-    - nestif
+    - dupword
+    - err113
+    - exhaustruct
     - funlen
     - gocognit
     - gocyclo
-    - exhaustruct
-    - dupword
+    - godot
+    - godox
+    - ireturn
+    - lll
     - musttag
+    - nestif
+    - nlreturn
+    - tagalign
+    - tagliatelle
+    - testpackage
+    - varnamelen
+    - wrapcheck
+    - wsl
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
